--- a/Open-ILS/web/opac/locale/en-US/opac.dtd
+++ b/Open-ILS/web/opac/locale/en-US/opac.dtd
@@ -219,7 +219,7 @@ avoid using bookbags all together.  Thank you.">
 If an item has already been selected to fulfill the hold, it will not be suspended'>
 <!ENTITY myopac.holds.thaw.confirm 'Are you sure you wish to activate the selected holds?'>
 <!ENTITY myopac.holds.thaw_date.confirm 'Are you sure you wish to change the activate date for the selected holds?'>
-<!ENTITY myopac.holds.freeze.select_thaw "Select a 'Suspend' date.  This is the date at which the holds will become active again.  If no date is chosen, the holds will remain suspended until they are manually activated.">
+<!ENTITY myopac.holds.freeze.select_thaw "Select an automatic activation date.  If no date is chosen, the holds will remain suspended until they are manually activated.">
 
 <!ENTITY opac.holds.freeze "Suspend this hold">
 <!ENTITY opac.holds.freeze.help "A suspended hold will retain its place in the queue, but will not be fulfilled until it has been activated.">
@@ -248,7 +248,7 @@ If an item has already been selected to fulfill the hold, it will not be suspend
 By default, holds will use the notification style you choose here.  
 However, you will still have the option to change individual holds regardless of this setting.">
 <!ENTITY myopac.holds.unfrozen "Active">
-<!ENTITY myopac.holds.frozen.until "Suspend Until...">
+<!ENTITY myopac.holds.frozen.until "Activate on...">
 
 <!--	================================================================= 
 	 MyOPAC Summary page
