--- a/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
@@ -201,6 +201,7 @@ staff.circ.utils.offline.due_date=Due Date
 staff.circ.utils.offline.backdate=Back Date
 staff.circ.utils.offline.use_time=Use Time
 staff.circ.utils.not_cataloged=Not Cataloged
+staff.circ.utils.retrieving=Retrieving...
 staff.circ.utils.owning_lib=Owning Library
 staff.circ.utils.loan_duration.short=Short
 staff.circ.utils.loan_duration.normal=Normal
