Localization for offline transaction management

--- a/Open-ILS/xul/staff_client/server/locale/en-US/admin.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/admin.properties
@@ -38,3 +38,61 @@ staff.admin.transit_list.retrieving_row.error=error retrieving row
 staff.admin.transit_list.empty_array.error=Empty array returned by hold retrieve.
 staff.admin.transit_list.retrieve_hold.error=retrieving hold id = %1$s for transit id = %2$s
 staff.admin.transit_list.transit_id.error=retrieving transit id = %1$s
+staff.admin.offline_manage_xacts.init_list.organization=Organization
+staff.admin.offline_manage_xacts.init_list.description=Description
+staff.admin.offline_manage_xacts.init_list.date_created=Date Created
+staff.admin.offline_manage_xacts.init_list.created_by=Created By
+staff.admin.offline_manage_xacts.init_list.upload_count=Upload Count
+staff.admin.offline_manage_xacts.init_list.transactions_processed=Transactions Processed
+staff.admin.offline_manage_xacts.init_list.processing=Processing?
+staff.admin.offline_manage_xacts.init_list.date_started=Date Started
+staff.admin.offline_manage_xacts.init_list.date_completed=Date Completed
+staff.admin.offline_manage_xacts.init_list.session=Session
+staff.admin.offline_manage_xacts.init_script_list.date_uploaded=Date Uploaded
+staff.admin.offline_manage_xacts.init_script_list.uploaded_by=Uploaded By
+staff.admin.offline_manage_xacts.init_script_list.time_delta=Server/Local Time Delta
+staff.admin.offline_manage_xacts.init_script_list.workstation=Workstation
+staff.admin.offline_manage_xacts.init_error_list.workstation=Workstation
+staff.admin.offline_manage_xacts.init_error_list.timestamp=Timestamp
+staff.admin.offline_manage_xacts.init_error_list.type=Type
+staff.admin.offline_manage_xacts.init_error_list.event_code=Event Code
+staff.admin.offline_manage_xacts.init_error_list.event_name=Event Name
+staff.admin.offline_manage_xacts.init_error_list.event_description=Event Description
+staff.admin.offline_manage_xacts.init_error_list.item_barcode=Item Barcode
+staff.admin.offline_manage_xacts.init_error_list.patron_barcode=Patron Barcode
+staff.admin.offline_manage_xacts.init_error_list.due_date=Due Date
+staff.admin.offline_manage_xacts.init_error_list.count=In House Use Count
+staff.admin.offline_manage_xacts.init_error_list.noncat=Non-Cataloged?
+staff.admin.offline_manage_xacts.init_error_list.noncat_type=Non-Cataloged Type
+staff.admin.offline_manage_xacts.init_error_list.noncat_count=Non-Cataloged Count
+staff.admin.offline_manage_xacts.init_error_list.backdate=Check In Backdate
+staff.admin.offline_manage_xacts.error.check_perm=Error checking permissions
+staff.admin.offline_manage_xacts.error.bad_cgi_response=Bad response from CGI component
+staff.admin.offline_manage_xacts.error.execute_error=Execute error:
+staff.admin.offline_manage_xacts.error.session_execute_error=Error executing session
+staff.admin.offline_manage_xacts.error.session_retrieval=Error retrieving session errors:
+staff.admin.offline_manage_xacts.error.non_existent_file=Can't rename a non-existent file
+staff.admin.offline_manage_xacts.error.renaming_file=Error renaming transaction file
+staff.admin.offline_manage_xacts.error.unique_file=Taking too long to find a unique filename.
+staff.admin.offline_manage_xacts.error.transaction_conflicts=Something bad happened.  New offline transactions were accumulated during our attempted upload.  Tell your system admin that the file involved is %1$s
+staff.admin.offline_manage_xacts.error.transaction_conflicts.title=Transaction conflicts
+staff.admin.offline_manage_xacts.error.transaction_conflicts.ok=Ok
+staff.admin.offline_manage_xacts.error.transaction_conflicts.confirm=Check here to confirm this message
+staff.admin.offline_manage_xacts.error.reverting_file=Error reverting transaction file
+staff.admin.offline_manage_xacts.error.archiving_file=Error archiving transaction file
+staff.admin.offline_manage_xacts.session_upload=Please select a session to upload to.
+staff.admin.offline_manage_xacts.single_session_upload=Please select a single session to upload to.
+staff.admin.offline_manage_xacts.no_transactions=No pending transactions to upload.
+staff.admin.offline_manage_xacts.error.uploading_file=There was an error:
+staff.admin.offline_manage_xacts.error.uploading_transactions=Error uploading transactions
+staff.admin.offline_manage_xacts.error.retrieving_session=Error retrieving session status
+staff.admin.offline_manage_xacts.create_session.prompt=Please enter a description:
+staff.admin.offline_manage_xacts.create_session=Create an Offline Transaction Session
+staff.admin.offline_manage_xacts.error.create_session=Error creating session
+staff.admin.offline_manage_xacts.error.create_session.alert=Error: %1$s
+staff.admin.offline_manage_xacts.error.retrieving_sessions=Error retrieving offline sessions.
+staff.admin.offline_manage_xacts.error.rendering_session=Error rendering session list
+staff.admin.offline_manage_xacts.upload_status=Uploaded Transactions for %1$s
+staff.admin.offline_manage_xacts.error.rendering_script=Error rendering script list
+staff.admin.offline_manage_xacts.error.rendering_errors=Exceptions for %1$s
+staff.admin.offline_manage_xacts.error.rendering_error_list=Error rendering error list
