Missed a few strings in offline transaction management

--- a/Open-ILS/xul/staff_client/server/locale/en-US/admin.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/admin.properties
@@ -96,3 +96,6 @@ staff.admin.offline_manage_xacts.upload_status=Uploaded Transactions for %1$s
 staff.admin.offline_manage_xacts.error.rendering_script=Error rendering script list
 staff.admin.offline_manage_xacts.error.rendering_errors=Exceptions for %1$s
 staff.admin.offline_manage_xacts.error.rendering_error_list=Error rendering error list
+staff.admin.offline_manage_xacts.completed=Completed
+staff.admin.offline_manage_xacts.no=No
+staff.admin.offline_manage_xacts.yes=Yes
