Move some more hardcoded strings to i18n.

--- a/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
@@ -3,3 +3,8 @@ cat.batch_operation_failed=The whole batch operation failed. %1$s
 cat.copy_buckets.tab=Copy Buckets
 cat.total_bucket_items_in_bucket=Contains %1$s bucket items
 cat.results_returned=Returning %1$s hits
+staff.cat.bib_brief.record_id=Record ID = %1$s
+staff.cat.bib_brief.deleted=(Deleted)
+staff.cat.bib_brief.inactive=(Inactive)
+staff.cat.bib_brief.noncat=(Not Cataloged)
+staff.cat.bib_brief.noncat.alert=Item not cataloged.
