--- a/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
@@ -302,6 +302,8 @@ staff.circ.utils.route_to.no_address=We do not have a holds address for this lib
 staff.circ.utils.route_to.no_address.error=Unable to retrieve mailing address.
 staff.circ.utils.payload.author=Author: %1$s
 staff.circ.utils.payload.in_transit=%1$s is in transit.
+staff.circ.checkin.hold_capture=Hold Capture
+staff.circ.checkin.check_in.tab=Item Check In
 staff.circ.checkin.error=Check In Failed (in circ.util.checkin) (%1$s): 
 # "Circulation" - check &staff.main.menu.circ.label; in lang.dtd
 # "Offline Interface" - check &staff.main.menu.circ.offline.label; in lang.dtd
