Duplicate IDs do not work for message catalogs

--- a/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
@@ -279,7 +279,7 @@ staff.circ.utils.billable.amount=Transaction for %1$s billable $%2$s
 staff.circ.utils.transit_hold_cancelled=Original hold for transit cancelled.
 staff.circ.utils.item_checked_in=%1$s was already checked in.
 staff.circ.utils.item_not_cataloged=ITEM_NOT_CATALOGED event but copy status is %1$s
-staff.circ.utils.route_to=This item needs to be routed to %1$s
+staff.circ.utils.route_to.msg=This item needs to be routed to %1$s
 staff.circ.utils.route_item_error=We should have received a ROUTE_ITEM
 staff.circ.utils.route_item_status_error=status of Holds Shelf, but no actual hold found.
 staff.circ.utils.payload.hold.barcode=Barcode: %1$s
