Start bringing i18n to the copy browser. Repair a typo in bib_brief.xul

--- a/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
@@ -8,3 +8,29 @@ staff.cat.bib_brief.deleted=(Deleted)
 staff.cat.bib_brief.inactive=(Inactive)
 staff.cat.bib_brief.noncat=(Not Cataloged)
 staff.cat.bib_brief.noncat.alert=Item not cataloged.
+staff.cat.copy_browser.add_item.title=Add Item
+staff.cat.copy_browser.add_item.error=copy browser -> add copies
+staff.cat.copy_browser.add_items_bucket.error=copy browser -> add copies to bucket
+staff.cat.copy_browser.replace_barcode.failed=Barcode %1$s not likely replaced.
+staff.cat.copy_browser.replace_barcode.error=copy browser -> replace barcode
+staff.cat.copy_browser.edit_items.error=Copy Browser -> Edit Items
+staff.cat.copy_browser.delete_items.confirm.plural=Are you sure you would like to delete these %1$s items?
+staff.cat.copy_browser.delete_items.confirm=Are you sure you would like to delete this item?
+staff.cat.copy_browser.delete_items.title=Delete Items?
+staff.cat.copy_browser.delete_items.delete=Delete
+staff.cat.copy_browser.delete_items.cancel=Cancel
+staff.cat.copy_browser.delete_items.override=Override Delete Failure?
+staff.cat.copy_browser.delete_items.complete=Action complete.
+staff.cat.copy_browser.delete_items.error=copy browser -> delete items
+staff.cat.copy_browser.print_spine.tab=Spine Labels
+staff.cat.copy_browser.print_spine.error=copy browser -> Spine Labels
+staff.cat.copy_browser.add_volume.permission_error=You do not have permission to add volumes to that library.
+staff.cat.copy_browser.add_volume.title=Add Volume/Item
+staff.cat.copy_browser.add_volume.error=copy browser -> add volumes
+staff.cat.copy_browser.edit_volume.permission_error=You don't have permission to edit this volume.
+staff.cat.copy_browser.edit_volume.title=Volume
+staff.cat.copy_browser.edit_volume.title.plural=Volumes
+staff.cat.copy_browser.edit_volume.failed=Edit failed:  You tried to change a volume's callnumber to one that is already in use for the given library.  You should transfer the items to the desired callnumber instead.
+staff.cat.copy_browser.edit_volume.success=Volumes modified.
+staff.cat.copy_browser.edit_volume.error=volume update error: 
+staff.cat.copy_browser.edit_volume.exception=Copy Browser -> Volume Edit
