--- a/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
@@ -34,3 +34,12 @@ staff.cat.copy_browser.edit_volume.failed=Edit failed:  You tried to change a vo
 staff.cat.copy_browser.edit_volume.success=Volumes modified.
 staff.cat.copy_browser.edit_volume.error=volume update error: 
 staff.cat.copy_browser.edit_volume.exception=Copy Browser -> Volume Edit
+staff.cat.copy_browser.delete_volume.prompt=Are you sure you would like to delete this volume?
+staff.cat.copy_browser.delete_volume.prompt.plural=Are you sure you would like to delete these %1$s volumes?
+staff.cat.copy_browser.delete_volume.title=Delete Volumes?
+staff.cat.copy_browser.delete_volume.delete=Delete
+staff.cat.copy_browser.delete_volume.cancel=Cancel
+staff.cat.copy_browser.delete_volume.override=Override Delete Failure?
+staff.cat.copy_browser.delete_volume.copies_remain=You must delete all the copies on the volume before you may delete the volume itself.
+staff.cat.copy_browser.delete_volume.success=Volumes deleted.
+staff.cat.copy_browser.delete_volume.exception=copy browser -> delete volumes
