Change some of the wording for hold freeze/thaw.  Need to rethink fancy_prompt in light of i18n (maybe do away with it), so there are some lingering uses of freeze/thaw in the staff client

--- a/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
@@ -264,7 +264,8 @@ staff.circ.utils.hold_status.2=Waiting for capture
 staff.circ.utils.hold_status.3=In-Transit
 staff.circ.utils.hold_status.4=Ready for pickup
 staff.circ.utils.frozen=Frozen?
-staff.circ.utils.thaw_date=Thaw Date
+staff.circ.utils.active=Active?
+staff.circ.utils.thaw_date=Activation Date
 staff.circ.utils.thaw_date.none=No Date
 staff.circ.utils.pickup_lib=Pickup Library (Full Name)
 staff.circ.utils.current_copy.none=No Copy
