Correct problems found by check_properties.py

--- a/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
@@ -18,7 +18,7 @@ staff.circ.checkin2.exception=Something went wrong in circ.util.checkin2: %1$s
 staff.circ.checkin.exception.external=circ.checkin: Calling external .on_checkin()
 staff.circ.checkin2.exception.external=circ.checkin2: Calling external .on_checkin()
 staff.circ.checkin.exception.no_external=circ.checkin: Calling external .on_checkin()
-staff.circ.checkin2.exception.checkin2: circ.util.checkin2: No external .on_failure()
+staff.circ.checkin2.exception.no_external=circ.util.checkin2: No external .on_failure()
 staff.circ.util.checkin.exception.external=circ.util.checkin: Calling external .on_checkin()
 staff.circ.util.checkin.exception.no_external=circ.util.checkin: Calling external .on_checkin()
 staff.circ.checkout.sorting.exception=error in sorting non-cataloged items: %1$s
