some i18n, fewer steps for freezing/thawing holds, and disabling editing of hold range/focus through css.  Needs more testing

--- a/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
@@ -314,3 +314,18 @@ staff.circ.checkin.renew_failed.override=Override Renew Failure?
 staff.circ.renew.barcode=Barcode: %1$s
 staff.circ.renew.barcode.status=Barcode: %1$s Status: %2$s
 staff.circ.renew.barcode.msg=Barcode: %1$s Message: %2$s
+staff.circ.holds.activate.prompt=Are you sure you would like to activate hold %1$s?
+staff.circ.holds.activate.prompt.plural=Are you sure you would like to activate holds %1$s?
+staff.circ.holds.suspend.prompt=Are you sure you would like to suspend hold %1$s?
+staff.circ.holds.suspend.prompt.plural=Are you sure you would like to suspend holds %1$s?
+staff.circ.holds.modifying_holds=Modifying Holds
+staff.circ.holds.modifying_holds.yes=Yes
+staff.circ.holds.modifying_holds.no=No
+staff.circ.holds.already_activated=Hold %1$s was already activated.
+staff.circ.holds.already_activated.plural=Holds %1$s were already activated.
+staff.circ.holds.already_suspended=Hold %1$s was already suspended.
+staff.circ.holds.already_suspended.plural=Holds %1$s were already suspended.
+staff.circ.holds.unexpected_error.not_likely_modified=Holds not likely modified.
+staff.circ.holds.unexpected_error.not_likely_activated=Holds not likely activated.
+staff.circ.holds.unexpected_error.not_likely_suspended=Holds not likely suspended.
+
