more i18n, prevent hold activation date from being set to Today, and auto-suspend holds when activation date is set

--- a/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/circ.properties
@@ -318,6 +318,10 @@ staff.circ.holds.activate.prompt=Are you sure you would like to activate hold %1
 staff.circ.holds.activate.prompt.plural=Are you sure you would like to activate holds %1$s?
 staff.circ.holds.suspend.prompt=Are you sure you would like to suspend hold %1$s?
 staff.circ.holds.suspend.prompt.plural=Are you sure you would like to suspend holds %1$s?
+staff.circ.holds.activation_date.prompt=Please enter an Activation Date (or leave blank to unset) for hold %1$s.  This will also Suspend the hold.
+staff.circ.holds.activation_date.prompt.plural=Please enter an Activation Date (or leave blank to unset) for holds %1$s.  This will also Suspend the holds.
+staff.circ.holds.activation_date.too_early.error=Activation Date needs to be either unset or set to fall on a future date.
+staff.circ.holds.activation_date.invalid_date=Invalid Date
 staff.circ.holds.modifying_holds=Modifying Holds
 staff.circ.holds.modifying_holds.yes=Yes
 staff.circ.holds.modifying_holds.no=No
@@ -328,4 +332,3 @@ staff.circ.holds.already_suspended.plural=Holds %1$s were already suspended.
 staff.circ.holds.unexpected_error.not_likely_modified=Holds not likely modified.
 staff.circ.holds.unexpected_error.not_likely_activated=Holds not likely activated.
 staff.circ.holds.unexpected_error.not_likely_suspended=Holds not likely suspended.
-
