Back on that i18n horse

--- a/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/cat.properties
@@ -43,3 +43,29 @@ staff.cat.copy_browser.delete_volume.override=Override Delete Failure?
 staff.cat.copy_browser.delete_volume.copies_remain=You must delete all the copies on the volume before you may delete the volume itself.
 staff.cat.copy_browser.delete_volume.success=Volumes deleted.
 staff.cat.copy_browser.delete_volume.exception=copy browser -> delete volumes
+staff.cat.copy_browser.mark_library.alert=Library + Record marked as Volume Transfer Destination
+staff.cat.copy_browser.mark_library.prompt=Choose just one Library to mark as Volume Transfer Destination
+staff.cat.copy_browser.mark_library.title=Limit Selection
+staff.cat.copy_browser.mark_volume.alert=Volume marked as Item Transfer Destination
+staff.cat.copy_browser.mark_volume.prompt=Choose just one Volume to mark as Item Transfer Destination
+staff.cat.copy_browser.mark_volume.title=Limit Selection
+staff.cat.copy_browser.transfer_volume.alert=Please mark a library as the destination from within holdings maintenance and then try this again.
+staff.cat.copy_browser.transfer.prompt=Transfer volumes %1$s to library %2$s on the following record?
+staff.cat.copy_browser.transfer.submit.label=Transfer
+staff.cat.copy_browser.transfer.cancel.label=Cancel
+staff.cat.copy_browser.transfer.cancel.accesskey=C
+staff.cat.copy_browser.transfer.title=Volume Transfer
+staff.cat.copy_browser.transfer.incomplete=Transfer Aborted
+staff.cat.copy_browser.transfer.override.failure=Override Volume Transfer Failure?
+staff.cat.copy_browser.transfer.ineligible_destination=That destination cannot have volumes.
+staff.cat.copy_browser.transfer.success=Volumes transferred.
+staff.cat.copy_browser.transfer.unexpected_error=All volumes not likely transferred.
+staff.cat.copy_browser.transfer_items.missing_volume=Please mark a volume as the destination from within holdings maintenance and then try this again.
+staff.cat.copy_browser.transfer_items.unexpected_error=All copies not likely transferred.
+staff.cat.copy_browser.missing_library=Missing library list.
+staff.cat.copy_browser.consortial_copy_count.error=Error retrieving consortial copy count.
+staff.cat.copy_browser.list_init.tree_location=Location/Barcode
+staff.cat.copy_browser.list_init.volume_count=Volumes
+staff.cat.copy_browser.list_init.copy_count=Copies
+staff.cat.copy_browser.actions.error=Copy Browser Actions
+staff.cat.copy_browser.refresh_list.error=Problem refreshing the volume/copy tree.
