--- a/Open-ILS/xul/staff_client/server/locale/en-US/common.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/common.properties
@@ -12,6 +12,8 @@ common.barcode.status.warning.barred=Barred
 common.barcode.status.warning.blocked=Blocked
 common.barcode.status.warning.unknown=with an unknown code: %1$s
 common.date.invalid=Invalid Date
+# common.grouping_string = the string that should be inserted between elements of a grouped list
+common.grouping_string=, 
 common.unimplemented=Not yet implemented
 lang.version=remote v1
 openils.global_util.clear_cache.error=Problem clearing the cache: %1$s
