Missing formatting flag for a common error message.

--- a/Open-ILS/xul/staff_client/server/locale/en-US/common.properties
+++ b/Open-ILS/xul/staff_client/server/locale/en-US/common.properties
@@ -5,7 +5,7 @@ common.ok=Ok
 common.clear=Clear
 common.confirm=Check here to confirm this message.
 common.error.default=Please report that this happened.
-common.barcode.status.warning=Warning: As of %1$s, this barcode (%2$s) was flagged %3.
+common.barcode.status.warning=Warning: As of %1$s, this barcode (%2$s) was flagged %3$s.
 common.barcode.status.warning.lost=Lost
 common.barcode.status.warning.expired=Expired
 common.barcode.status.warning.barred=Barred
